--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,13 +1,13 @@
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
-Announcer.announceAlertTitle=Node bejelentése, hogy elérheti a többi számítógép
+Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
 Announcer.announceDetails=Mi már elküldtünk ennyi ${recentSentAnnouncements} bejelentést (rendszerüzenetet),amiből még ennyi fut: ${runningAnnouncements} , hozzáadtunk ${addedNodes} node-ot (csatlakozási pontot),és (${refusedNodes} utasítottak vissza). Mi jelenleg csatlakozunk ${connectedSeednodes} seednodes-hoz (olyan számítógépek amik bejelentenek minket a freenet hálózatára) és még további ${disconnectedSeednodes} SeedNodes-hoz próbálunk csatlakozni.
 Announcer.announceAlertNoSeednodes=A számítógépeden nem található a  seednodes.fref fájl, ezért a kliensed (Freenet node) nem képes automatikusan elvégezni a feljelentkezési folyamatot (bootstrap) az opennet hálózatára. Kérlek adj hozzá néhány olyan számítógépet (node-ot) a listádhoz, akik csatlakoznak a hálózathoz, vagy töltsd le az internetről a hiányzó fájlt a  http://downloads.freenetproject.org/alpha/opennet/ címről.
-Announcer.announceLoading=Freenet is currently loading the seednodes file so that it can attempt to announce to the rest of the network. Announcement may take a few minutes.
-Announcer.announceDisabledTooOldTitle=Announcement disabled (too old)
-Announcer.announceDisabledTooOld=This node appears to be too old to connect to the current Freenet network. We have disabled announcement, since it is not getting anywhere.
-Announcer.announceDisabledTooOldUpdateDisabled=Please enable auto-update on the ${config}Configuration page${/config}.
-Announcer.announceDisabledTooOldShort=Your Freenet node has tried to connect to the network but your copy of Freenet is too old. You should upgrade.
+Announcer.announceLoading=Freenet éppen betölti a seednode-kat tartalmazó fájlt, Ezután kísérletet teszünk, hogy feljelentkezzünk az opennet-re. Ez több percig is eltarthat.
+Announcer.announceDisabledTooOldTitle=Bejelentés (rendszerüzentek) kikapcsolva (túl régi)
+Announcer.announceDisabledTooOld=Az ezen a számítógépen futó szoftver túl réginek tűnik, hogy csatlakozzon a jelenlegi Freenet hálózathoz. Mi kikapcsoljuk a rendszerüzeneteket, mert a többi számítógép (node) úgysem válaszol rájuk. (Frissítsd a programodat az internetről)
+Announcer.announceDisabledTooOldUpdateDisabled=Kérjük engedélyezd az automatikus frissítéseket itt: ${config}Configuration page${/config}.
+Announcer.announceDisabledTooOldShort=A számítógéped megpróbált a többi Freenet-et futtató géphez kapcsolódni, de a szoftvered túl régi, elavult. Frissítened kell!
 Announcer.announceAlertShort=Freenet is trying to connect to the network, it will be slow for a while.
 Announcer.coolingOff=For the next ${time} seconds, your Freenet node is waiting for the nodes that it just announced to to connect, if there are not enough nodes it will try a different node.
 Announcer.dontKnowAddress=Freenet has not yet been able to determine our IP address, we cannot announce until we know what it is.
