--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,3 +1,4 @@
+##\\70- sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -8,65 +9,65 @@ Announcer.announceDisabledTooOldTitle=Bejelentés (rendszerüzentek) kikapcsolva
 Announcer.announceDisabledTooOld=Az ezen a számítógépen futó szoftver túl réginek tűnik, hogy csatlakozzon a jelenlegi Freenet hálózathoz. Mi kikapcsoljuk a rendszerüzeneteket, mert a többi számítógép (node) úgysem válaszol rájuk. (Frissítsd a programodat az internetről)
 Announcer.announceDisabledTooOldUpdateDisabled=Kérjük engedélyezd az automatikus frissítéseket itt: ${config}Configuration page${/config}.
 Announcer.announceDisabledTooOldShort=A számítógéped megpróbált a többi Freenet-et futtató géphez kapcsolódni, de a szoftvered túl régi, elavult. Frissítened kell!
-Announcer.announceAlertShort=Freenet is trying to connect to the network, it will be slow for a while.
-Announcer.coolingOff=For the next ${time} seconds, your Freenet node is waiting for the nodes that it just announced to to connect, if there are not enough nodes it will try a different node.
-Announcer.dontKnowAddress=Freenet has not yet been able to determine our IP address, we cannot announce until we know what it is.
-BMPFilter.InvalidBitDepthD=The bit depth field is not set to 1,2,4,8,16 or 32.
-BMPFilter.InvalidBitDepthT=Invalid bit depth
-BMPFilter.InvalidBitMapInfoHeaderSizeD=Size of bitmap info header is not 40
-BMPFilter.InvalidBitMapInfoHeaderSizeT=Invalid Bitmap info header size
-BMPFilter.InvalidDimensionD=The image has negative width or height
-BMPFilter.InvalidDimensionT=Invalid Dimension
-BMPFilter.InvalidFileSizeD=Image file size is not matching to headersize+imagedatasize
-BMPFilter.InvalidFileSizeT=Invalid image file size
-BMPFilter.InvalidImageDataSizeD=The calculated image data size is not matching with the actual size
-BMPFilter.InvalidImageDataSizeT=Invalid image data size
-BMPFilter.InvalidNoOfPlanesD=The number of planes is not one.
-BMPFilter.InvalidNoOfPlanesT=Invalid no of planes
-BMPFilter.InvalidOffsetD=The data offset is negative
-BMPFilter.InvalidOffsetT=Invalid Offset
-BMPFilter.InvalidResolutionD=Image has negative resolution
-BMPFilter.InvalidResolutionT= Invalid resolution
-BMPFilter.InvalidStartWordD=Start word is not one of the BM,BA,CI,CP,IC and PT
-BMPFilter.InvalidStartWordT=Invalid Start word
+Announcer.announceAlertShort=A freenet megpróbál kapcsolódni a hálózathoz, lassú lesz egy ideig.
+Announcer.coolingOff=A következő ${time} másodpercben, a számítógéped (kliensed) arra vár, hogy a kliensek (node-ok), akikhez eddig megpróbáltál csatlakozni válaszoljanak, mert nincs több elérhető számítógép, amikhez kapcsolódni tudnál...
+Announcer.dontKnowAddress=A Freenet program még nem tudta megállapítani az internet felőli ip-címedet, és addig nem tud bejelentkezési kérelmeket küldeni, amíg ezt nem tudja.
+BMPFilter.InvalidBitDepthD=(The bit depth) - A bit mélység mező csak a következő értékeket veheti fel: 1,2,4,8,16 vagy 32.
+BMPFilter.InvalidBitDepthT=Érvénytelen értéket adtál meg a bit depth mezőhöz. (bit mélység)
+BMPFilter.InvalidBitMapInfoHeaderSizeD= A bittérkép fejléc mérete nem 40 (bájt)
+BMPFilter.InvalidBitMapInfoHeaderSizeT=Érvénytelen Bitmap info header méret (bittérkép fejléc mérete)
+BMPFilter.InvalidDimensionD= A képnek negatív szélesség és/vagy magasság érték van megadva...
+BMPFilter.InvalidDimensionT=Ez értelmezhetetlen... Nem tud vele mit kezdeni...
+BMPFilter.InvalidFileSizeD=A kép mérete nem egyezik meg a fejléccel (header) és a kép tényleges méretével (imagedatasize.)
+BMPFilter.InvalidFileSizeT=Ezért érvénytelen a kép mérete.
+BMPFilter.InvalidImageDataSizeD= A számolt kép mérete nem egyezik meg a tényleges mérettel...
+BMPFilter.InvalidImageDataSizeT=Ezért érvénytelen a kép mérete.
+BMPFilter.InvalidNoOfPlanesD=A sik mérete nem egy. (legalább 3-dimenziós kép)
+BMPFilter.InvalidNoOfPlanesT=Érvénytelen a síkok száma. 
+BMPFilter.InvalidOffsetD=Az adat negatív hosszúságú
+BMPFilter.InvalidOffsetT=Érvénytelen hosszúsági érték...
+BMPFilter.InvalidResolutionD=A képnek negatív felbontása van...
+BMPFilter.InvalidResolutionT= Érvénytelen felbontás
+BMPFilter.InvalidStartWordD=A kezdő szó nem ezekközül való: BM,BA,CI,CP,IC és PT
+BMPFilter.InvalidStartWordT=Érvénytelen kezdő szó
 BMPFilter.notBMP=Could not filter BMP:
-Bookmark.noName=no name
-BookmarkEditorToadlet.addBookmark=Add Bookmark
-BookmarkEditorToadlet.addCategory=Add Category
-BookmarkEditorToadlet.addNewBookmark=Add a new bookmark
-BookmarkEditorToadlet.addNewCategory=Add a new category
-BookmarkEditorToadlet.addedNewBookmark=The new bookmark has been added successfully.
-BookmarkEditorToadlet.addedNewBookmarkTitle=New Bookmark Added
-BookmarkEditorToadlet.bookmarkDoesNotExist=Bookmark "${bookmark}" does not exist.
-BookmarkEditorToadlet.cancelCut=Cancel cut
-BookmarkEditorToadlet.changesSaved=The changes has been saved successfully.
-BookmarkEditorToadlet.changesSavedTitle=Modifications Saved
-BookmarkEditorToadlet.confirmDelete=Delete
-BookmarkEditorToadlet.addDefaultBookmarks=Re-add the default bookmark set
-BookmarkEditorToadlet.cut=Cut
-BookmarkEditorToadlet.delete=Delete
-BookmarkEditorToadlet.deleteBookmark=Delete bookmark
-BookmarkEditorToadlet.deleteBookmarkConfirm=Are you sure you want to delete ${bookmark}?
-BookmarkEditorToadlet.deleteCategory=Delete category
-BookmarkEditorToadlet.deleteCategoryConfirm=Are you sure you want to delete ${bookmark} and all of its children?
-BookmarkEditorToadlet.deleteSucceeded=The bookmark has been deleted successfully.
-BookmarkEditorToadlet.deleteSucceededTitle=Delete Succeeded
-BookmarkEditorToadlet.descLabel=Detailed description of the bookmark
-BookmarkEditorToadlet.edit=Edit
-BookmarkEditorToadlet.editBookmarkTitle=Edit Bookmark
-BookmarkEditorToadlet.editCategoryTitle=Edit Category
-BookmarkEditorToadlet.error=Error
-BookmarkEditorToadlet.explainLabel=Short description
-BookmarkEditorToadlet.hasAnActivelinkLabel=Does the freesite have an active link?
-BookmarkEditorToadlet.invalidKeyTitle=Invalid Key
-BookmarkEditorToadlet.invalidKeyWithReason=Invalid Freenet key.
-BookmarkEditorToadlet.invalidKey=The Freenet key is invalid.
-BookmarkEditorToadlet.invalidNameTitle=Invalid Name
-BookmarkEditorToadlet.invalidName=The bookmark name is invalid.
-BookmarkEditorToadlet.keyLabel=Key:
-BookmarkEditorToadlet.moveDown=Down
-BookmarkEditorToadlet.moveUp=Up
-BookmarkEditorToadlet.myBookmarksTitle=My bookmarks
+Bookmark.noName=Nincs név
+BookmarkEditorToadlet.addBookmark=Könyvejlző hozzáadása
+BookmarkEditorToadlet.addCategory=Kategória hozzáadása
+BookmarkEditorToadlet.addNewBookmark=Új könyvjelző hozzáadása
+BookmarkEditorToadlet.addNewCategory=Új kategória hozzáadása
+BookmarkEditorToadlet.addedNewBookmark=Az új könyvjelző sikeresen hozzáadva.
+BookmarkEditorToadlet.addedNewBookmarkTitle=Új könyvejlző hozzáadva.
+BookmarkEditorToadlet.bookmarkDoesNotExist=A könyvjelző "${bookmark}" nem létezik.
+BookmarkEditorToadlet.cancelCut=Kivágás visszavonása.
+BookmarkEditorToadlet.changesSaved=A változtatások sikeresen elmentve.
+BookmarkEditorToadlet.changesSavedTitle=Módosítások mentve.
+BookmarkEditorToadlet.confirmDelete=Törlés
+BookmarkEditorToadlet.addDefaultBookmarks=Újra hozzáadja az alapértelmezett könyvjelzőket.
+BookmarkEditorToadlet.cut=Kivágás
+BookmarkEditorToadlet.delete=Törlés
+BookmarkEditorToadlet.deleteBookmark=Könyvjelző törlése
+BookmarkEditorToadlet.deleteBookmarkConfirm=Biztos benne, hogy törölni akarja a ${bookmark} a nevű könyvjelzőt?
+BookmarkEditorToadlet.deleteCategory=Kategória törlése
+BookmarkEditorToadlet.deleteCategoryConfirm=Biztos benne, hogy a  ${bookmark} nevű mappát/kategóriát és minden hozzá tartozó további könyvjelzőt törölni akar?
+BookmarkEditorToadlet.deleteSucceeded=A könyvjelző sikeresen törölve.
+BookmarkEditorToadlet.deleteSucceededTitle=Törlés sikeres
+BookmarkEditorToadlet.descLabel=A könyvjelző részletes leírása.
+BookmarkEditorToadlet.edit=Módosítás
+BookmarkEditorToadlet.editBookmarkTitle=Könyvjelző módosítása
+BookmarkEditorToadlet.editCategoryTitle=Kategória módosítása.
+BookmarkEditorToadlet.error=Hiba
+BookmarkEditorToadlet.explainLabel=Rövid leírás
+BookmarkEditorToadlet.hasAnActivelinkLabel=A freesite-nak van active link-je? (freenet site freesite, active link - logójának címe)
+BookmarkEditorToadlet.invalidKeyTitle=Érvénytelen kulcs
+BookmarkEditorToadlet.invalidKeyWithReason=Érvénytelen Freenet kulcs.
+BookmarkEditorToadlet.invalidKey=A Freenet kulcs érvénytelen.
+BookmarkEditorToadlet.invalidNameTitle=Érvénytelen név.
+BookmarkEditorToadlet.invalidName=A könyvjelző neve érvénytelen.
+BookmarkEditorToadlet.keyLabel=Kulcs:
+BookmarkEditorToadlet.moveDown=Le
+BookmarkEditorToadlet.moveUp=Fel
+BookmarkEditorToadlet.myBookmarksTitle=Könyvjelzőim
 BookmarkEditorToadlet.myBookmarksExplanation=Links to Freenet-hosted web sites, you will be notified when they are updated
 BookmarkEditorToadlet.nameLabel=Name:
 BookmarkEditorToadlet.paste=Paste
