--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\70- sornál tartok
+##\\86- sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -68,22 +68,22 @@ BookmarkEditorToadlet.keyLabel=Kulcs:
 BookmarkEditorToadlet.moveDown=Le
 BookmarkEditorToadlet.moveUp=Fel
 BookmarkEditorToadlet.myBookmarksTitle=Könyvjelzőim
-BookmarkEditorToadlet.myBookmarksExplanation=Links to Freenet-hosted web sites, you will be notified when they are updated
-BookmarkEditorToadlet.nameLabel=Name:
-BookmarkEditorToadlet.paste=Paste
-BookmarkEditorToadlet.pasteOrCancel=Click on a paste icon or cancel.
-BookmarkEditorToadlet.pasteTitle=Cut/Paste
-BookmarkEditorToadlet.publicDescLabel=Description for friends:
-BookmarkEditorToadlet.recommendToFriends=Recommend to friends
-BookmarkEditorToadlet.save=Save
-BookmarkEditorToadlet.share=Share
-BookmarkEditorToadlet.title=Bookmark Editor
-BookmarkEditorToadlet.urlDecodeError=URL Decode Error
-BookmarkFeedUserAlert.addAsABookmark=Add as a bookmark
+BookmarkEditorToadlet.myBookmarksExplanation=A freenet-en tárolt web szájtok linkjeinek elmentésével, te kapsz értesítést, ha frissülnek.
+BookmarkEditorToadlet.nameLabel=Név:
+BookmarkEditorToadlet.paste=Beillesztés
+BookmarkEditorToadlet.pasteOrCancel=Kattintson a beillesztés gombra, vagy a mégsére.
+BookmarkEditorToadlet.pasteTitle=Kivágás/Beillesztés
+BookmarkEditorToadlet.publicDescLabel=Megjegyzés a barátnak:
+BookmarkEditorToadlet.recommendToFriends=Ajánlom a barátomnak
+BookmarkEditorToadlet.save=Mentés
+BookmarkEditorToadlet.share=Megosztás
+BookmarkEditorToadlet.title=Könyvjelző szerkesztése
+BookmarkEditorToadlet.urlDecodeError=URL dekódolása sikertelen.
+BookmarkFeedUserAlert.addAsABookmark=Hozzáadás, mint könyvjelzőt.
 BookmarkFeedUserAlert.bookmarkURI=URI:
-BookmarkFeedUserAlert.bookmarkDescription=Description:
-BookmarkFeedUserAlert.delete=Delete
-BookmarkFeedUserAlert.peerName=Name:
+BookmarkFeedUserAlert.bookmarkDescription=Megjegyzés/leírás:
+BookmarkFeedUserAlert.delete=Törlés
+BookmarkFeedUserAlert.peerName=Név:
 BookmarkFeedUserAlert.title=${from} recommends you a freesite
 BookmarkItem.bookmarkUpdated=The bookmarked site ${name} has been updated to edition ${edition}.
 BookmarkItem.bookmarkUpdatedTitle=Bookmark Updated: ${name}
