--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\86- sornál tartok
+##\\140- sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -84,20 +84,20 @@ BookmarkFeedUserAlert.bookmarkURI=URI:
 BookmarkFeedUserAlert.bookmarkDescription=Megjegyzés/leírás:
 BookmarkFeedUserAlert.delete=Törlés
 BookmarkFeedUserAlert.peerName=Név:
-BookmarkFeedUserAlert.title=${from} recommends you a freesite
-BookmarkItem.bookmarkUpdated=The bookmarked site ${name} has been updated to edition ${edition}.
-BookmarkItem.bookmarkUpdatedTitle=Bookmark Updated: ${name}
-BookmarkItem.bookmarkUpdatedWithLink=The bookmarked site ${link}${name}${/link} has been updated to edition ${edition}.
-BookmarkItem.bookmarkUpdatedShort=Bookmarked freesite updated: ${name}
-BookmarkItem.deleteBookmarkUpdateNotification=Delete notification
-BookmarkItem.unnamedBookmark=Unnamed Bookmark
-BookmarkManager.defaultBookmarks=Default bookmarks
-BookmarkManager.list=List of bookmarks
-BookmarkManager.listLong=A list of bookmarked freesites
-BookmarkManager.malformedBookmark=Malformed Bookmark
-Bookmarks.Defaults.Name.categoryIndexes=Directories of websites on Freenet
-Bookmarks.Defaults.Name.categorySoftware=Freenet related software and documentation
-Bookmarks.Defaults.Name.categoryBlogs=Freenet team's blogs
+BookmarkFeedUserAlert.title=${from} ajánlott neked egy oldalt
+BookmarkItem.bookmarkUpdated=A ${name} könyvjelző oldala a következő verzióra frissült: ${edition}.
+BookmarkItem.bookmarkUpdatedTitle=Könyvjelző frissült: ${name}
+BookmarkItem.bookmarkUpdatedWithLink=A könyvjezlő oldala: ${link}${name}${/link} a következő verzióra frissült: ${edition}.
+BookmarkItem.bookmarkUpdatedShort=Könyvjelzőzött oldal frissült: ${name}
+BookmarkItem.deleteBookmarkUpdateNotification=Törlési figyelmeztetés
+BookmarkItem.unnamedBookmark=Névtelen könyvjelző
+BookmarkManager.defaultBookmarks=Alapértelmezett könyvjelző
+BookmarkManager.list=Könyvjelzők listája
+BookmarkManager.listLong=A könyvjelzőzött Freenet-es honlapok listája
+BookmarkManager.malformedBookmark=Rosszul formázott könyvjelző
+Bookmarks.Defaults.Name.categoryIndexes=Weboldalak kollekciója a freenet-en
+Bookmarks.Defaults.Name.categorySoftware=Freenet-hez kapcsolódó szoftverek és dokumentumok
+Bookmarks.Defaults.Name.categoryBlogs=Freenet csapat blogjai
 Bookmarks.Defaults.Description.TUFI=A one-page index with a menu including categories
 Bookmarks.Defaults.Description.AFK=An index of freenet sites with categories (outdated, use Enzo)
 Bookmarks.Defaults.Description.Enzo=An index of Freenet sites with categories
@@ -124,20 +124,20 @@ Bookmarks.Defaults.ShortDescription.TUFI=Older Freenet sites
 Bookmarks.Defaults.ShortDescription.ISF=Index of French sites
 Bookmarks.Defaults.ShortDescription.FMS=Message boards over Freenet
 Bookmarks.Defaults.ShortDescription.Fniki=An older Wiki about Freenet
-Bookmarks.Defaults.ShortDescription.Freemail=Email over Freenet
+Bookmarks.Defaults.ShortDescription.Freemail=Email a Freenet-en keresztül
 Bookmarks.Defaults.ShortDescription.Publish=How to publish web sites on freenet
 Bookmarks.Defaults.ShortDescription.FreesiteHOWTO=Another guide to publishing a website to Freenet
 Bookmarks.Defaults.ShortDescription.Sone=Social chat over Freenet
 Bookmarks.Defaults.ShortDescription.freenetdocwiki=Freenet documentation wiki
 Bookmarks.Defaults.ShortDescription.FSNG=Step by step guide to how to set up anonymous email, forums, chat, social tools etc on Freenet. Strongly recommended!
 Bookmarks.Defaults.ShortDescription.jSite=Essential tool for uploading websites to Freenet
-Bookmarks.Defaults.ShortDescription.Flog.Toad=Chief Freenet developer's personal blog
-Bookmarks.Defaults.ShortDescription.Flog.Bombe=Sone developer's personal blog
-Bookmarks.Defaults.ShortDescription.Flog.Xor=Freetalk developer's blog
-BooleanOption.parseError=Unrecognized boolean: ${val} - try true or false
-ChatForumsToadlet.title=Talk to other people on Freenet
-ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}web link${/frost-web}) - The original Freenet discussion boards client. This has severe spam and denial of service problems, we strongly recommend you run one of the others. Like FMS, this is not part of Freenet, so you will have to install and run it yourself.
-ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System is a message boards client, which is actively maintained and has a largish community. It is not part of Freenet, so you will have to download it and run it yourself.
+Bookmarks.Defaults.ShortDescription.Flog.Toad=Chief Freenet fejlesztő személyes blogja
+Bookmarks.Defaults.ShortDescription.Flog.Bombe=Sone fejlesztő személyes blogja
+Bookmarks.Defaults.ShortDescription.Flog.Xor=Freetalk fejlesztő blogja
+BooleanOption.parseError=Érvénytelen logikai érték: ${val} - próbálja a  true (igaz) vagy false (hamis) értékeket.
+ChatForumsToadlet.title=Beszéljen más emberekkel is a freenet-en. 
+ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}web link${/frost-web}) - Az eredeti freenet kommunikációs kliens. Van pár spam és ddos szolgáltatás megtagadásos támadás problémája, mi erősen ajánjljuk neked, Futtass inkáb egy másik szoftvert. Mint az FMS, ez nem része alapból a Freenet-nek, tehát neked kell telepítened és futtatnod.
+ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System (Freenet üzenő rendszer) egy fórum kliens, ami folyamatosan fejlesztett és nagy közössége van. Ez nem része alapból a Freenet-nek, tehát neked kell telepítened és futtatnod.
 ChatForumsToadlet.fsng=${fsng}Freenet Social Networking Guide${/fsng} - This unofficial guide can be very helpful in setting up these and other Freenet communication tools.
 ChatForumsToadlet.sone=${sone}Sone${/sone} - A person and follower centered discussion-system. This is a plugin for Freenet. It requires the WebOfTrust plugin.
 ChatForumsToadlet.content2=The Freenet team did not write or review Frost, FMS, or Sone, so we cannot guarantee their quality. There are many other Freenet plugins and apps (such as wikis) which one can find by browsing Freenet.
