--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\140- sornál tartok
+##\\148- sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -140,11 +140,11 @@ ChatForumsToadlet.frost=${frost-freenet}Frost${/frost-freenet} (${frost-web}web 
 ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System (Freenet üzenő rendszer) egy fórum kliens, ami folyamatosan fejlesztett és nagy közössége van. Ez nem része alapból a Freenet-nek, tehát neked kell telepítened és futtatnod.
 ChatForumsToadlet.fsng=${fsng}Freenet Social Networking Guide${/fsng} - This unofficial guide can be very helpful in setting up these and other Freenet communication tools.
 ChatForumsToadlet.sone=${sone}Sone${/sone} - A person and follower centered discussion-system. This is a plugin for Freenet. It requires the WebOfTrust plugin.
-ChatForumsToadlet.content2=The Freenet team did not write or review Frost, FMS, or Sone, so we cannot guarantee their quality. There are many other Freenet plugins and apps (such as wikis) which one can find by browsing Freenet.
-CSSTokenizerFilter.deletedDisallowedString=Deleted disallowed string
-CSSTokenizerFilter.deletedUnmatchedChar=ignored unmatched char:
-CSSTokenizerFilter.deletedUnofficialIdent=Deleted unofficial ident
-CSSTokenizerFilter.deletedUnofficialIdentWithURL=Deleted unofficial ident with url
+ChatForumsToadlet.content2=Nem a Freenet csapata írta, vagy ellenőrizte a Frost, FMS, or Sone programokat, így nem garantálhatjuk a minőségüket. Van sok másik Freenet plugin és program (mint a wiki) amivel böngészhetsz a Freenet-en.
+CSSTokenizerFilter.deletedDisallowedString=Törölt elfogadthatatlan karakterlánc
+CSSTokenizerFilter.deletedUnmatchedChar=Figyelmen kívül hagyja a nem egyező karaktereket:
+CSSTokenizerFilter.deletedUnofficialIdent= Törölt nem eredeti identitás/felhasználó
+CSSTokenizerFilter.deletedUnofficialIdentWithURL=Törölt nem eredeti identitás/felhasználó hivatkozással.
 CSSTokenizerFilter.invalidURLContents=Invalid contents of url()
 CSSTokenizerFilter.supplementalCharsNotSupported=UCS-4 CHARACTERS OVER 0xFFFF NOT SUPPORTED!
 CSSTokenizerFilter.unknownAtIdentifierLabel=Unknown @identifier:
