--- a/src/freenet/l10n/freenet.l10n.hu.properties
+++ b/src/freenet/l10n/freenet.l10n.hu.properties
@@ -1,4 +1,4 @@
-##\\148- sornál tartok
+##\\208. sornál tartok
 testing.test=test$(test1)test$(test2)test
 Announcer.announceAlertIntro=Freenet csatlakozik a hálózathoz - ez eltarthat egy pár percig. A program teljesítménye az elkövetkezendő órákban folyamatosan nőni fog. A program sebessége mindig jelentősen le fog csökkenni, ha pár percnél tovább marad kikapcsolva, ezért kérjük próbálja meg  folyamatosan futtatni (24 órát minden nap), ha lehetséges.
 Announcer.announceAlertTitle=Node bejelentése, hogy elérhesse a többi számítógép
@@ -145,66 +145,66 @@ CSSTokenizerFilter.deletedDisallowedString=Törölt elfogadthatatlan karakterlá
 CSSTokenizerFilter.deletedUnmatchedChar=Figyelmen kívül hagyja a nem egyező karaktereket:
 CSSTokenizerFilter.deletedUnofficialIdent= Törölt nem eredeti identitás/felhasználó
 CSSTokenizerFilter.deletedUnofficialIdentWithURL=Törölt nem eredeti identitás/felhasználó hivatkozással.
-CSSTokenizerFilter.invalidURLContents=Invalid contents of url()
-CSSTokenizerFilter.supplementalCharsNotSupported=UCS-4 CHARACTERS OVER 0xFFFF NOT SUPPORTED!
-CSSTokenizerFilter.unknownAtIdentifierLabel=Unknown @identifier:
-ConfigToadlet.appliedFailureExceptions=Your configuration changes were applied with the following exceptions:
-ConfigToadlet.appliedFailureTitle=Configuration Not Applied
-ConfigToadlet.appliedSuccess=Configuration changes were applied successfully.
-ConfigToadlet.appliedTitle=Configuration Applied
-ConfigToadlet.apply=Apply
+CSSTokenizerFilter.invalidURLContents=Érvénytelen elemek az url-ben. ()
+CSSTokenizerFilter.supplementalCharsNotSupported=UCS-4 karakterek 0xFFFF alatt NEM TÁMOGATOTTAK!
+CSSTokenizerFilter.unknownAtIdentifierLabel=Ismeretlen @identifier:
+ConfigToadlet.appliedFailureExceptions= A beállítások módosítása elfogadva az alábbi kivételekkel:
+ConfigToadlet.appliedFailureTitle=Beállítások nem elfogadhatók
+ConfigToadlet.appliedSuccess=Módosított beállítások sikeresen elfogadva.
+ConfigToadlet.appliedTitle= Beállítások módosítva
+ConfigToadlet.apply=Alkalmaz
 ConfigToadlet.configNavTitle=Configuration Navigation
-ConfigToadlet.confirmReset=Are you sure you want to reset all settings on this page to their default values?
-ConfigToadlet.confirmResetTitle=Reset to defaults?
-ConfigToadlet.console=Console interface
-ConfigToadlet.defaultIs=Default: '${default}'.
+ConfigToadlet.confirmReset= Biztos benne, hogy az oldalhoz tartozó összes beállítást vissza akarja állítani az alapértelmezésekre?
+ConfigToadlet.confirmResetTitle=Beállítások teljes visszaállítása?
+ConfigToadlet.console=Parancssoros interfész
+ConfigToadlet.defaultIs=Alapértelmezett: '${default}'.
 ConfigToadlet.false=false
 ConfigToadlet.fcp=FCP
-ConfigToadlet.fproxy=Web interface
-ConfigToadlet.fullTitle=Freenet Node Configuration
-ConfigToadlet.logger=Logs
-ConfigToadlet.needRestartTitle=Node restart required
-ConfigToadlet.needRestart=Some config need restart to activate, please restart Freenet immediately.
-ConfigToadlet.needRestartShort=Some config need restart to activate, please restart Freenet immediately.
-ConfigToadlet.restartNode=Restart Now
-ConfigToadlet.selectDirectory=Select directory
+ConfigToadlet.fproxy=Web interfész
+ConfigToadlet.fullTitle=Freenet Node/kliens beállításai
+ConfigToadlet.logger=Logs - programnaplók
+ConfigToadlet.needRestartTitle=Node/kliens újraindítása szükséges
+ConfigToadlet.needRestart=Néhány beállítás életbelépéséhez újra kell indítani a Freenet szoftvert, kérjük mihamarabb indítsa újra a szoftvert.
+ConfigToadlet.needRestartShort=Néhány beállítás életbelépéséhez újra kell indítani a szoftvert, kérjük mihamarabb indítsja újra.
+ConfigToadlet.restartNode=újraindítás most.
+ConfigToadlet.selectDirectory=Könyvtár választása.
 PageMaker.modeSimple=Simple interface
-PageMaker.modeSimpleTooltip=A simple interface all users can use
+PageMaker.modeSimpleTooltip=A simple interfészt az összes felhasználó használhatja.
 PageMaker.modeAdvanced=Advanced interface
-PageMaker.modeAdvancedTooltip=An advanced interface that only experienced Freenet users and developers will need to use
+PageMaker.modeAdvancedTooltip=az advanced interfészt csak a tapasztalt Freenet felhasználóknak és fejlesztőknek ajánlott használni.
 ConfigToadlet.node=Core settings
 ConfigToadlet.node.install=Installation settings
-ConfigToadlet.node.load=Load management
-ConfigToadlet.node.opennet=Opennet
-ConfigToadlet.node.scheduler=Request scheduling
+ConfigToadlet.node.load=Terhelés elosztás
+ConfigToadlet.node.opennet=Opennet - nyílt hálózat
+ConfigToadlet.node.scheduler=Request scheduling bejövő kérések ütemezése
 ConfigToadlet.node.testnet=Testnet mode
-ConfigToadlet.node.updater=Auto-update
-ConfigToadlet.pluginmanager=Plugins
-ConfigToadlet.possibilitiesTitle=Continue
-ConfigToadlet.resetToDefaults=Reset to defaults
-ConfigToadlet.returnToNodeConfig=Return to configuration page
-ConfigToadlet.shortTitle=Configuration
-ConfigToadlet.ssl=SSL (restart required)
-ConfigToadlet.title=Freenet Node Configuration
-ConfigToadlet.title.node=Configure core settings e.g. bandwidth usage
+ConfigToadlet.node.updater=Automatikus frissítések
+ConfigToadlet.pluginmanager=Plugins - Beépülők
+ConfigToadlet.possibilitiesTitle=Folytatás
+ConfigToadlet.resetToDefaults=Alapértelmezett beállítások visszaállítása. 
+ConfigToadlet.returnToNodeConfig=Visszatérés a beállítások lapra.
+ConfigToadlet.shortTitle=Beállítások
+ConfigToadlet.ssl=SSL (újraindítás szükséges)
+ConfigToadlet.title=Freenet Node/kliens beállításai
+ConfigToadlet.title.node=állítsa be a  core settings például szávszélesség használat
 ConfigToadlet.title.node.install=Installation settings, e.g. readonly program directory locations
-ConfigToadlet.title.node.load=Settings for controlling the amount of traffic through your Freenet node
+ConfigToadlet.title.node.load=Állítsa be, hogy mekkora forgalmat bonyolíthat a szoftver
 ConfigToadlet.title.node.opennet=Settings related to connecting to nodes other than Friends
 ConfigToadlet.title.node.scheduler=Settings related to choosing local requests to run
 ConfigToadlet.title.node.updater=Configure the auto-update system
-ConfigToadlet.title.ssl=Configure SSL
-ConfigToadlet.title.fcp=Configure Freenet Client Protocol (used for client applications to talk to Freenet)
-ConfigToadlet.title.fproxy=Configure the web interface
-ConfigToadlet.title.logger=Configure the amount of information kept by Freenet for troubleshooting purposes
-ConfigToadlet.title.console=Configure the console interface
+ConfigToadlet.title.ssl=SSL beállítása
+ConfigToadlet.title.fcp=Freenet Client Protocol (FCP) beállítása (ezt a többi kieg. szoftver használja, hogy kommunikáljon a Freenet-tel)
+ConfigToadlet.title.fproxy=A web interfész beállítása
+ConfigToadlet.title.logger=Állítsa be, hogy milyen eseményeket naplózzon a freenet, hibakeresés céljából
+ConfigToadlet.title.console=A parancssoros interfész beállításai
 ConfigToadlet.title.toadletsymlinker=Configure web interface aliases
 ConfigToadlet.toadletsymlinker=Web interface aliases
 ConfigToadlet.true=true
-ConfigToadlet.undo=Undo unsaved changes
+ConfigToadlet.undo=Nem mentett beállítások visszavonása.
 ConfigToadlet.wrapperSettingsTitle=Wrapper Settings
 ConfigToadlet.wrapper=wrapper
-ConfigurablePersister.doesNotExistCannotCreate=File does not exist and cannot be created
-ConfigurablePersister.existsCannotReadWrite=File exists and cannot read/write it
+ConfigurablePersister.doesNotExistCannotCreate=Fájl nem létezik és nem hozható létre. (tipikus i/o hiba)
+ConfigurablePersister.existsCannotReadWrite=Fájl létezik de nem olvasható/ írható (jogosultsági hiba)
 ConnectivityToadlet.byIPTitle=Packets for ${ip} by IP address - ${status} (minimum tunnel lifetime ${tunnelLength})
 ConnectivityToadlet.title=Internet connection status
 ConnectivityToadlet.connectivity=Status of your internet connection (port forwarding etc)
